--- a/index.html
+++ b/index.html
@@ -4,9 +4,49 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Refacciones</title>
+    <!-- 
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/fomantic-ui/2.9.2/semantic.min.css"
+    />
+
+    <link
+      rel="stylesheet"
+      href="https://cdn.datatables.net/2.0.7/css/dataTables.semanticui.css"
+    />
+    <link
+      rel="stylesheet"
+      href="https://cdn.datatables.net/buttons/3.0.2/css/buttons.semanticui.css"
+    />
+    <link
+      rel="stylesheet"
+      href="https://cdn.datatables.net/select/2.0.2/css/select.semanticui.css"
+    />
+    <link
+      rel="stylesheet"
+      href="https://cdn.datatables.net/datetime/1.5.2/css/dataTables.dateTime.min.css"
+    />
+    <link
+      rel="stylesheet"
+      href="/extensions/Editor/css/editor.semanticui.css"
+    /> -->
   </head>
   <body>
     <div id="root"></div>
+
+    <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/fomantic-ui/2.9.2/semantic.min.js"></script>
+    <script src="https://cdn.datatables.net/2.0.7/js/dataTables.js"></script>
+    <script src="https://cdn.datatables.net/1.11.5/js/jquery.dataTables.min.js"></script>
+    <script src="https://cdn.datatables.net/buttons/3.0.2/js/dataTables.buttons.js"></script>
+    <script src="https://cdn.datatables.net/buttons/3.0.2/js/buttons.semanticui.js"></script>
+    <script src="https://cdn.datatables.net/select/2.0.2/js/dataTables.select.js"></script>
+    <script src="https://cdn.datatables.net/select/2.0.2/js/select.semanticui.js"></script>
+    <script src="https://cdn.datatables.net/datetime/1.5.2/js/dataTables.dateTime.min.js"></script>
+    <script src="/extensions/Editor/js/dataTables.editor.js"></script>
+    <script src="/extensions/Editor/js/editor.semanticui.js"></script> -->
+
     <script type="module" src="/src/main.jsx"></script>
   </body>
 </html>
